--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=mmo_test
+DB_USERNAME=mmo_db
+DB_PASSWORD=Ikjh9Uzjh8Hgg
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
